Tue Jan 22 16:10:58 2002  George Lebl <jirka@5z.com>

	* gnome-desktop-item.c: when testing for tryexec, just do an
	  access (foo, X_OK) if it's an absolute filename

Wed Jan 16 18:34:55 2002  George Lebl <jirka@5z.com>

	* gnome-desktop-item.[ch]: fix error quark, and start things in
	  home directory unless a flag is passed

2002-01-16 Stephen Browne <stephen.browne@sun.com>
	
	* gnome-desktop-item.c

	gnome_desktop_item_find_icon should return NULL if icon is 
	empty string

2002-01-08  Glynn Foster  <glynn.foster@sun.com>

	* gnome-desktop-item.c: (ditem_execute): Add G_SPAWN_SEARCH_PATH
	to g_spawn_async call. Thanks to jschurger for fix.

Fri,  4 Jan 2002 22:28:51 -0500  Frank Belew <frb@ximian.com>

	* Makefile.am: remove -I$(includedir), bad things happen when 
	  prefix is the same as gnome1 and that gets added so early on the
	  list

Thu Dec 20 15:43:21 2001  George Lebl <jirka@5z.com>

	* gnome-desktop-item.c: use g_spawn and return some cool errors from
	  g_spawn and g_shell on exec

Wed Dec 19 19:52:53 2001  George Lebl <jirka@5z.com>

	* gnome-desktop-item.c: actually make looking for kde icons work,
	  and don't check the kde stuff if we've already found a gnome one,
	  also ignore dot directories to avoid infinite loops and such.

Wed Dec 19 18:34:00 2001  George Lebl <jirka@5z.com>

	* gnome-desktop-item.c: s/G_DIR_SEPARATOR/G_DIR_SEPARATOR_S/,
	  LONG LIVE TYPE UNSAFETY!

Wed Dec 19 18:23:17 2001  George Lebl <jirka@5z.com>

	* gnome-desktop-item.[ch]: add a find_icon function which
	  doesn't work only on desktop items but no matter how you got the
	  icon name.  Also deal with sizes and only look in kde hicolor
	  dirs.

2001-12-16  Gediminas Paulauskas <menesis@delfi.lt>

	* gnome-desktop/gnome-ditem-edit.c: get translations from
	GETTEXT_PACKAGE domain and with UTF-8 codeset, so that translations
	work when library is used outside of gnome-core.

Fri Dec 14 16:43:23 2001  George Lebl <jirka@5z.com>
