@@ -1,3 +1,9 @@
+Fri Feb 01 17:37:09 2002  George Lebl <jirka@5z.com>
+
+	* gnome-desktop-item.c: make sure to notice errors on save
+
+	* test-ditem.c: fix the get_entry_type check and fix saving
+
 Tue Jan 22 16:10:58 2002  George Lebl <jirka@5z.com>
 
 	* gnome-desktop-item.c: when testing for tryexec, just do an
